tests/parsing/parameter_defined_twice/stderr.golden
error: redeclaration of 'A' parameter
bus.fbd +1:17
   |
 1 | type my_mask(A, A) mask
   |                 ^
